--- a/components/preparing_workspace/title.scss
+++ b/components/preparing_workspace/title.scss
@@ -5,3 +5,9 @@
     font-size: 56px;
     letter-spacing: -0.01em;
 }
+
+@media screen and (max-width: 900px) {
+    .PreparingWorkspaceTitle {
+        font-size: 36px;
+    }
+}
